--- a/Water_Quality.ipynb
+++ b/Water_Quality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,10 +19,20 @@
     "import seaborn as sns\n",
     "\n",
     "#Preprocessing\n",
-    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.preprocessing import OrdinalEncoder, MinMaxScaler, OneHotEncoder, StandardScaler\n",
+    "#Machine Learning identifying algorithms/Model\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "#Machine Learning\n",
-    "from sklearn.cluster import KMeans"
+    "# Classification\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "from lightgbm import LGBMClassifier\n",
+    "\n",
+    "\n",
+    "#Machine Learning Evaluation\n",
+    "from sklearn.metrics import top_k_accuracy_score, precision_score, recall_score, accuracy_score,  confusion_matrix  # Classification\n",
+    "     "
    ]
   },
   {
@@ -2568,6 +2578,235 @@
     "plt.xlabel('Potability')\n",
     "plt.ylabel('Count')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=df.drop(['Potability'], axis=1)\n",
+    "y=df['Potability']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix,accuracy_score\n",
+    "\n",
+    "class Classification_models:\n",
+    "  def __init__(self,x_train,x_test,y_train,y_test):\n",
+    "    self.x_train = x_train\n",
+    "    self.x_test = x_test\n",
+    "    self.y_train = y_train\n",
+    "    self.y_test = y_test\n",
+    "\n",
+    "  def decisiontree(self):\n",
+    "    from sklearn.tree import DecisionTreeClassifier\n",
+    "    model = DecisionTreeClassifier().fit(x_train,y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    print('Decision Tree Classifier accuracy score: ',accuracy)\n",
+    "    return accuracy\n",
+    "\n",
+    "  def RandomForestClassifier(self):\n",
+    "    from sklearn.ensemble import RandomForestClassifier\n",
+    "    model = RandomForestClassifier().fit(x_train,y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    print('Random Forest Classifier accuracy score: ',accuracy)\n",
+    "    return accuracy\n",
+    "\n",
+    "  def Logistic(self):\n",
+    "    from sklearn.linear_model import LogisticRegression\n",
+    "    model = LogisticRegression().fit(x_train,y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    print('Random Forest Classifier accuracy score: ',accuracy)\n",
+    "    return accuracy\n",
+    "  def SupertVector(self):\n",
+    "    from sklearn import svm\n",
+    "    model = svm.SVC().fit(x_train,y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    print('Support vector machines accuracy score: ',accuracy)\n",
+    "    return accuracy\n",
+    "\n",
+    "  def KNeighborsClassifier(self):\n",
+    "    from sklearn.neighbors import KNeighborsClassifier\n",
+    "    model = KNeighborsClassifier().fit(x_train,y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    print('KNeighbors Classifier accuracy score: ',accuracy)\n",
+    "    return accuracy\n",
+    "\n",
+    "  def GaussianNaiveBayes(self):\n",
+    "    from sklearn.naive_bayes import GaussianNB\n",
+    "    model=GaussianNB().fit(x_train,y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    print(\"Naive Bayes Classifier accuracy score: \",accuracy)\n",
+    "    return accuracy\n",
+    "\n",
+    "  def GradientBoosting(self):\n",
+    "    from sklearn.ensemble import GradientBoostingClassifier\n",
+    "    model = GradientBoostingClassifier().fit(x_train,y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    accuracy  = accuracy_score(y_test,y_pred)\n",
+    "    print(\"Gradient Boosting Classifier accuracy score: \",accuracy)\n",
+    "    return accuracy\n",
+    "def AdaBoost(self):\n",
+    "    from sklearn.ensemble import AdaBoostClassifier\n",
+    "    model = AdaBoostClassifier().fit(x_train,y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    print(\"AdaBoost Classifier accuracy score: \",accuracy)\n",
+    "    return accuracy\n",
+    "\n",
+    "def SGDClassifier(self):\n",
+    "    from sklearn.linear_model import SGDClassifier\n",
+    "    model = SGDClassifier().fit(x_train,y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    print(\"SGD Classifier accuracy score: \",accuracy)\n",
+    "    return accuracy\n",
+    "\n",
+    "def MLPClassifier(self):\n",
+    "    from sklearn.neural_network import MLPClassifier\n",
+    "    model = MLPClassifier().fit(x_train,y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    print(\"Neural network models accuracy score: \",accuracy)\n",
+    "    return accuracy\n",
+    "\n",
+    "def NearestCentroid(self):\n",
+    "    from sklearn.neighbors import NearestCentroid\n",
+    "    model = NearestCentroid().fit(x_train,y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    print(\"Nearest Neighbors accuracy score: \",accuracy)\n",
+    "    return accuracy\n",
+    "def LGBMClassifier(self):\n",
+    "    from lightgbm import LGBMClassifier\n",
+    "    model = LGBMClassifier().fit(x_train,y_train)\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    print(\"LGBM Classifier accuracy score: \",accuracy)\n",
+    "    return accuracy\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Classification_models(x_train,x_test,y_train,y_test)\n",
+    "accuracy_scores = {\n",
+    "    'DecisionTree': model.decisiontree(),\n",
+    "    'RandomForest': model.RandomForestClassifier(),\n",
+    "    #'SupertVector': model.SupertVector(),\n",
+    "    #'KNeighborsClassifier' : model.KNeighborsClassifier(),\n",
+    "    #'GaussianNaiveBayes' : model.GaussianNaiveBayes(),\n",
+    "    #'GradientBoosting' : model.GradientBoosting(),\n",
+    "    #'AdaBoost' : model.AdaBoost(),\n",
+    "    # 'SGDClassifier' : model.SGDClassifier(),\n",
+    "    # 'MLPClassifier' : model.MLPClassifier(),\n",
+    "    # 'NearestCentroid' : model.NearestCentroid(),\n",
+    "    'LGBMClassifier' : model.LGBMClassifier(),\n",
+    "    'Logistic' : model.Logistic()}\n",
+    "\n",
+    "max_score_classifier = max(accuracy_scores, key=accuracy_scores.get)\n",
+    "max_accuracy_score = accuracy_scores[max_score_classifier]\n",
+    "\n",
+    "print(f\"\\nMaximum accuracy score: {max_accuracy_score:.4f} achieved by {max_score_classifier} classifier.\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 1162, number of negative: 1786\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000373 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 2295\n",
+      "[LightGBM] [Info] Number of data points in the train set: 2948, number of used features: 9\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.394166 -> initscore=-0.429836\n",
+      "[LightGBM] [Info] Start training from score -0.429836\n",
+      "LGBM Classifier accuracy score:  0.6737804878048781\n"
+     ]
+    }
+   ],
+   "source": [
+    "from lightgbm import LGBMClassifier\n",
+    "model = LGBMClassifier().fit(x_train,y_train)\n",
+    "y_pred = model.predict(x_test)\n",
+    "accuracy = accuracy_score(y_test,y_pred)\n",
+    "print(\"LGBM Classifier accuracy score: \",accuracy)\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Saravanan\\OneDrive\\Desktop\\Dataset\\.venv\\Lib\\site-packages\\sklearn\\metrics\\_ranking.py:1988: UndefinedMetricWarning:\n",
+      "\n",
+      "'k' (2) greater than or equal to 'n_classes' (2) will result in a perfect score and is therefore meaningless.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 0.5529411764705883, 0.4051724137931034)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Classification\n",
+    "kas = top_k_accuracy_score(y_test, y_pred)\n",
+    "ps = precision_score(y_test, y_pred)\n",
+    "rs = recall_score(y_test, y_pred)\n",
+    "\n",
+    "kas, ps, rs\n",
+    "     "
    ]
   }
  ],
